# Game-Engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Assets/shaders/: Renderer3D_Model.glsl  Renderer3D_Sphere.glsl  Renderer3D_camera.glsl  color.glsl  model.glsl
Assets/shaders/hdr/: background.glsl  brdf.glsl  cubemap.glsl  irradiance_convolution.glsl  prefilter.glsl
Assets/shaders/shadow/: Renderer3DDirectionalShadowDepthShader.glsl  Renderer3DPointShadowDepthShader.glsl  Renderer3DSpotShadowDepthShader.glsl
src/: main.cpp  main.txt
src/Client/: ClientApp.cpp  EditorLayer.cpp  EditorLayer.h
src/Core/: Application.cpp  Application.h  Base.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
src/Events/: ApplicationEvent.h  Event.h  KeyCodes.h  KeyEvent.h  MouseCodes.h  MouseEvent.h
src/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
src/Math/: AssimpToGLMConvert.cpp  AssimpToGLMConvert.h  Math.cpp  Math.h
src/Panels/: ProjectBrowserPanel.cpp  ProjectBrowserPanel.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
src/Renderer/: Animation.cpp  Animation.h  Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  HDRSkybox.cpp  HDRSkybox.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Renderer.cpp  Renderer.h  Renderer3D.cpp  Renderer3D.h  Shader.cpp  Shader.h  Shadow.cpp  Shadow.h  Sphere.cpp  Sphere.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  (+1 more)
src/Renderer/Manager/: HdrManager.cpp  HdrManager.h  MaterialManager.cpp  MaterialManager.h  MeshManager.cpp  MeshManager.h  ModelManager.cpp  ModelManager.h  SceneManager.cpp  SceneManager.h  TextureManager.cpp  TextureManager.h
src/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h
src/Utils/: PlatformUtils.cpp  PlatformUtils.h
